--- a/phone-commerce/src/main/resources/application.properties
+++ b/phone-commerce/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=phone-commerce
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/phone-commerce
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.thymeleaf.suffix=.html
