--- a/phone-commerce/src/main/resources/application.properties
+++ b/phone-commerce/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=phone-commerce
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/phone-commerce
+spring.datasource.url=jdbc:mysql://localhost:3306/phone-ecommerce?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-
-spring.thymeleaf.suffix=.html
+spring.datasource.password=
+spring.datasource.dbcp2.validation-query=/* ping */ select 1
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.show-sql=true
