--- a/phone-commerce/pom.xml
+++ b/phone-commerce/pom.xml
@@ -72,10 +72,10 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.3.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
 
     </dependencies>
