--- a/phone-commerce/src/main/resources/application.properties
+++ b/phone-commerce/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.mail.password=e
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
+
